<resources>
    <string name="app_name">Portfolio Monitoring</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_employer_selection">Select employer</string>
    <string name="actionAboutUs">About Us</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="aboutUs">
        Ten years ago\, Constant Content was a pioneer in the space of the creation and sale of prewritten content on the web.
        \n \n
        Since then we have grown from a small start-up to one of the Internets largest and most established marketplaces for authority\, original\, SEO friendly content.
        \n \n
        Over the years we have evolved with market trends and business needs\, and while we continue to offer thousands of original prewritten articles through our catalog, our primary focus is on the creation of custom content based on client specific requests and needs.
        \n \n
        Today as part of the RevenueWire EcoSystem\, we connect businesses and agencies to the best and most diverse selection of rigorously vetted writers online\, and facilitate the building of unique teams of writers to serve specific content needs. With a roster of over 100\,000 professional writers and more than 50\,000 businesses world-wide who trust us with their content needs\, we offer the most comprehensive high-quality article and custom content writing service on the Internet today.
        \n \n
        Constant Contents service includes a no-risk custom content writing service as well as the Web\'s largest catalog of unique articles for sale.
        \n \n
        Whether you need blog posts\, article writing\, copywriting\, copyediting\, SEO writing\, press releases\, white papers\, technical writing\, or any other written content\, we\’re experts in the space of delivering unique\, quality content.
    </string>
    <string name="prompt_email_mobile">Sign in with OTP</string>
    <string name="select_employer">Choose employer</string>
    <string name="company_master">company_master</string>
    <string name="users">users</string>
    <string name="mobile_number">user_mobile</string>
    <string name="prompt_company">select employer</string>
    <string name="company_sector">company_sector</string>
    <string name="action_next">Next</string>
    <string name="company_name">company_name</string>
    <string name="company_sector_txt">Company sector</string>
    <string name="company_score">company_score</string>
    <string name="otp_key">168742A1WdzmbPWHo59878e64</string>
    <string name="error_threshold">Too many users in sector of your employer, cannot proceed further.</string>
    <string name="company_name_txt">Company name</string>
    <string name="company_score_txt">Company score</string>
    <string name="title_registering_user">Registering user.</string>
    <string name="title_signing_in_user">Logging in</string>
    <string name="prompt_referral_code">Referral code (Optional)</string>
    <string name="referral_code_master">referral_code_master</string>
    <string name="referral_code">referral_code</string>
    <string name="error_referral_code_expired">Referral code expired.</string>
    <string name="isActive">isActive</string>
    <string name="error_passwords_not_matching">Passwords does not match !</string>
    <string name="error_registration">All fields are mandatory</string>
    <string name="error_invalid_mobile">Invalid mobile number</string>
    <string name="text_new_employer">Employer not in list?</string>
    <string name="text_new_employer_btn">Add new</string>
    <string name="prompt_employer">Name of employer</string>
    <string name="add">ADD</string>
    <string name="add_new_employer">Add new employer</string>
    <string name="error_employer_name">Please enter employer name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="error_select_employer">Please select employer first</string>
    <string name="title_fragment_about_us">About Us</string>
    <string name="title_fragment_cpmpany_details">Employer Details</string>
    <string name="error_referral_code_invalid">Invalid referral code</string>
</resources>
